Bug 1189197 - enqueue a silent frame to kick off the buffer queue callbacks. r=kinetik.